# University-Tech-Project

./: README.md
Advanced Programming Methods/A2/: 2ndlog6.txt  attempt4.txt  log5.txt
Affective_Computing_Project_Archive_2025/: emotion_classifier.py  facial_expression_model.pth  facial_expression_model_full.pth  landmarks_data.csv
Computer System Architecture/Lab 2/: lab2_ad+sub2.asm  lab2_mul.asm
Computer System Architecture/Lab 3/: lab3_ad+sub.asm  lab3_pr14_signed.asm
Computer System Architecture/Lab 4/: lab4.asm  lab5_32.asm
Computer System Architecture/Lab 6/: 2_lab2_28_11_2022.asm  ex12_Geanovu_Medeea-Elena_913.asm  input.txt
Data Structures/FixedCapBiMap/: FixedCapBiMapIterator.h
Data Structures/HashMap/: App.cpp  ExtendedTest.cpp  Map.cpp  MapIterator.h  ShortTest.cpp
Data Structures/IndexedList/: IndexedList.cpp  IndexedList.h  ShortTest.cpp
Databases/: lab3.sql
Logic and Functional Programming/: p1_12.pl
Operating Systems/lab11/: 1  (+3 more)
Personal Projects/: README.md
Probabilities and Statistics/: Lab1_1.m  Lab2.m  Lab2_sim.m  Lab3.m  Lab3_2.m  Lab3_2_b.m  Lab3_chi.m  Lab3_fisher.m  Lab4_2.m  Lab4_2_b.m  PS.m  f1.m
Semester 5/Parallel and Distributed Programming/TeamProject/: CMakeLists.txt  mainParallel.cpp  mainProcess.cpp
Semester 5/Parallel and Distributed Programming/TeamProject/assets/: Documentation.docx  finalInstructions.txt  runinstructions.txt
Semester 5/Parallel and Distributed Programming/TeamProject/instances/: master.cpp  worker.cpp
Semester 5/Parallel and Distributed Programming/TeamProject/parallel/: processChunk.cpp
(+667 files in other folders)
